documentacion/obtenida/ARINC 429/driver and software/PC708-1/API/P71W32.H

typedef void VOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long MSGADDR;
typedef unsigned long * LPMSGADDR;
typedef const char * LPCSTR;
typedef char * LPSTR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;

P71W32API VOID __stdcall PC708_XmtRd(LPUSHORT buf,USHORT framenum,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_SchedInsEnd(HCARD handleval);

P71W32API ERRVAL __stdcall PC708_SchedInsMsg(USHORT index,LPMSGADDR msgaddr,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_SchedInsStart(ULONG frametime,USHORT count,HCARD handleval);

P71W32API USHORT __stdcall PC708_SchedMaxval(LPUSHORT array,USHORT arraycount);

P71W32API USHORT __stdcall PC708_SchedMinval(LPUSHORT array,USHORT arraycount);

P71W32API ULONG __stdcall PC708_Shl(ULONG dataval,USHORT cntval);

P71W32API ULONG __stdcall PC708_Shr(ULONG dataval,USHORT cntval);

P71W32API VOID __stdcall PC708_TimerClear(HCARD handleval);

P71W32API ULONG __stdcall PC708_TimerRd(HCARD handleval);

P71W32API INT __stdcall PC708_TimerResolution(INT timerresol,HCARD handleval);

P71W32API USHORT __stdcall PC708_TimerResolutionEx(USHORT timershift,HCARD handleval);

P71W32API INT __stdcall PC708_ValAsciiCmpi(LPSTR str1,LPSTR str2);

P71W32API LPSTR __stdcall PC708_ValAsciiCpy(LPSTR strdest,LPCSTR strsrc,INT count);

P71W32API VOID __stdcall PC708_ValAsciiTrimLead(LPSTR buf);

P71W32API VOID __stdcall PC708_ValAsciiTrimTrail(LPSTR buf);

P71W32API ULONG __stdcall PC708_ValFromAscii(LPCSTR asciistr,INT radixval);

P71W32API USHORT __stdcall PC708_ValGetBits(USHORT oldvalue,INT startbit,INT endbit);

P71W32API LPSTR __stdcall PC708_ValIncAscii(LPSTR asciistr);

P71W32API LPSTR __stdcall PC708_ValInccAscii(LPSTR asciistr);

P71W32API BOOL __stdcall PC708_ValIsLower(INT value);

P71W32API INT __stdcall PC708_ValLenAscii(INT numbits,INT radixval);

P71W32API USHORT __stdcall PC708_ValPackCWD(INT TAval,INT TRflag,INT SAval,INT WCval);

P71W32API USHORT __stdcall PC708_ValPackRTCWD(INT MCflag,INT TAval,INT TRflag,INT SAval,INT count);

P71W32API USHORT __stdcall PC708_ValPutBits(USHORT oldvalue,USHORT newfld,INT startbit,INT endbit);

P71W32API LPSTR __stdcall PC708_ValToAscii(ULONG value,LPSTR asciistr,INT numbits,INT radixval);

P71W32API INT __stdcall PC708_ValToUpper(INT value);

P71W32API VOID __stdcall PC708_ValUnpackCWD(USHORT CWDval,LPINT TAval,LPINT TRflag,LPINT SAval,LPINT WCval);

P71W32API VOID __stdcall PC708_ValUnpackRTCWD(USHORT cwd,LPINT BCASTflag,LPINT MCflag,LPINT TAval,LPINT TRflag,LPINT SAval,LPINT count);

P71W32API ERRVAL __stdcall PC708_XmtAlloc(USHORT framecount,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_XmtConfigExxx(ULONG bcconfigval,ULONG msgconfigval,USHORT framefreq,USHORT intfreq,USHORT framecount,HCARD handleval);

P71W32API USHORT __stdcall PC708_XmtCountRd(HCARD handleval);

P71W32API VOID __stdcall PC708_XmtCountWr(USHORT countval,HCARD handleval);

P71W32API USHORT __stdcall PC708_XmtDataCountRd(HCARD handleval);

P71W32API VOID __stdcall PC708_XmtDataCountWr(USHORT countval,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_XmtFreq(USHORT framefreq,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_XmtFreqEx(USHORT framefreq,USHORT intfreq,USHORT framecount,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_XmtFreqExx(USHORT framefreq,USHORT intfreq,USHORT framecount,ULONG bcconfigval,USHORT bctotal,ULONG intconfigval,USHORT inttotal,ULONG msgconfigval,HCARD handleval);

P71W32API MSGADDR __stdcall PC708_XmtIndex(USHORT framenum,HCARD handleval);

P71W32API USHORT __stdcall PC708_XmtNumberRd(HCARD handleval);

P71W32API VOID __stdcall PC708_XmtNumberWr(USHORT brdnum,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_XmtPeriod(ULONG frameperiod,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_XmtPeriodEx(ULONG frameperiod,USHORT intfreq,USHORT framecount,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_XmtPeriodExx(ULONG frameperiod,USHORT intfreq,USHORT framecount,ULONG bcconfigval,USHORT bctotal,ULONG intconfigval,USHORT inttotal,ULONG msgconfigval,HCARD handleval);

P71W32API VOID __stdcall PC708_XmtRd(LPUSHORT buf,USHORT framenum,HCARD handleval);

P71W32API VOID __stdcall PC708_XmtSizeWr(USHORT mode,HCARD handleval);

/**
*
*  Transmitter configuration options
*
**/

#define XMTCFG_DEFAULT       0x00000000L	//Select all default settings
#define XMTCFG_BUSA          0x00000000L    //Message will be transmitted on bus A (default)
#define XMTCFG_BUSB          0x00000004L    //Message will be transmitted on bus B 
#define XMTCFG_NOSWAP		 0x00000000L	//Disable bit swapping (default)
#define XMTCFG_SWAP			 0x00004000L	//Enable bit swapping

/**
*
*  Receiver configuration options
*
**/

#define RCVCFG_DEFAULT       0x00000000L	//Select all default settings
#define RCVCFG_BUSA 	     0x00000000L	//Respond to channel A (default)
#define RCVCFG_BUSB	         0x00010000L	//Respond to channel B
#define RCVCFG_NOSWAP		 0x00000000L	//Disable bit swapping (default)
#define RCVCFG_SWAP			 0x00008000L	//Enable bit swapping
#define RCVCFG_WORDSYNC      0x00000000L	//Sync on words (default)
#define RCVCFG_BITSYNC       0x00080000L	//Sync on each bit


/**
*
*  Bus controller configuration options
*
**/

#define BCCFG_DEFAULT       0x00000000L     //Select all default settings
#define BCCFG_ENABLE        0x00000000L     //Enable bus controller (default)
#define BCCFG_DISABLE       0x00000001L     //Disable bus controller
#define BCCFG_TRIGNONE      0x00000000L     //No trigger (default)
#define BCCFG_TRIGEXT       0x00000010L     //Trigger external
#define BCCFG_TRIGSTART     0x00000020L     //Trigger external start
#define BCCFG_NOINTHALT     0x00000000L     //Do not generate interrupt on halt (default)
#define BCCFG_INTHALT       0x00000100L     //Generate interrupt on halt
#define BCCFG_NOINTPAUSE    0x00000000L     //Do not generate interrupt on pause (default)
#define BCCFG_INTPAUSE      0x00000200L     //Generate interrupt on pause
#define BCCFG_NOLOOPMAX     0x00000000L     //Disable maximum loop count (default)
#define BCCFG_LOOPMAX       0x00001000L     //Enable maximum loop count
#define BCCFG_NOSTEP        0x00000000L     //Disable single stepping (default)
#define BCCFG_STEP          0x00002000L     //Enable single stepping
#define BCCFG_NOSWAP		0x00000000L		//Disable bit swapping (default)
#define BCCFG_SWAP			0x00004000L		//Enable bit swapping
#define BCCFG_MC01          0x00000000L     //Select SA=00000 or SA=11111 for mode codes (default)
#define BCCFG_MC1           0x01000000L     //Select SA=11111 for mode codes
#define BCCFG_MC0           0x02000000L     //Select SA=00000 for mode codes
#define BCCFG_MCNONE        0x03000000L     //Disable mode codes
#define BCCFG_SYNCALL       0x00000000L     //*Sync on all messages (default)
#define BCCFG_SYNCSEL       0x40000000L     //*Selective sync