documentacion/obtenida/ARINC 429/driver and software/PC708-1/API/P71W32VB.BAS

Public Declare Function PC708_SchedInsEnd Lib "P71W32.DLL" Alias "_PC708_SchedInsEnd@4" (ByVal handleval As Long) As Long
Public Declare Function PC708_SchedInsMsg Lib "P71W32.DLL" Alias "_PC708_SchedInsMsg@12" (ByVal index As Integer, ByRef msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function PC708_SchedInsStart Lib "P71W32.DLL" Alias "_PC708_SchedInsStart@12" (ByVal frametime As Long, ByVal count As Integer, ByVal handleval As Long) As Long
Public Declare Function PC708_SchedMaxval Lib "P71W32.DLL" Alias "_PC708_SchedMaxval@8" (ByRef arrayval As Integer, ByVal arrayvalcount As Integer) As Integer
Public Declare Function PC708_SchedMinval Lib "P71W32.DLL" Alias "_PC708_SchedMinval@8" (ByRef arrayval As Integer, ByVal arrayvalcount As Integer) As Integer
Public Declare Function PC708_Shl Lib "P71W32.DLL" Alias "_PC708_Shl@8" (ByVal dataval As Long, ByVal cntval As Integer) As Long
Public Declare Function PC708_Shr Lib "P71W32.DLL" Alias "_PC708_Shr@8" (ByVal dataval As Long, ByVal cntval As Integer) As Long
Public Declare Function PC708_TimerClear Lib "P71W32.DLL" Alias "_PC708_TimerClear@4" (ByVal handleval As Long) As Long
Public Declare Function PC708_TimerRd Lib "P71W32.DLL" Alias "_PC708_TimerRd@4" (ByVal handleval As Long) As Long
Public Declare Function PC708_TimerResolution Lib "P71W32.DLL" Alias "_PC708_TimerResolution@8" (ByVal timerresol As Long, ByVal handleval As Long) As Long
Public Declare Function PC708_TimerResolutionEx Lib "P71W32.DLL" Alias "_PC708_TimerResolutionEx@8" (ByVal timershift As Integer, ByVal handleval As Long) As Integer
Public Declare Function PC708_ValAsciiCmpi Lib "P71W32.DLL" Alias "_PC708_ValAsciiCmpi@8" (ByRef str1 As String, ByRef str2 As String) As Long
Public Declare Function PC708_ValAsciiCpy Lib "P71W32.DLL" Alias "_PC708_ValAsciiCpy@12" (ByRef strdest As String, ByRef strsrc As String, ByVal count As Long) As Long
Public Declare Function PC708_ValAsciiTrimLead Lib "P71W32.DLL" Alias "_PC708_ValAsciiTrimLead@4" (ByRef buf As String) As Long
Public Declare Function PC708_ValAsciiTrimTrail Lib "P71W32.DLL" Alias "_PC708_ValAsciiTrimTrail@4" (ByRef buf As String) As Long
Public Declare Function PC708_ValFromAscii Lib "P71W32.DLL" Alias "_PC708_ValFromAscii@8" (ByRef asciistr As String, ByVal radixval As Long) As Long
Public Declare Function PC708_ValGetBits Lib "P71W32.DLL" Alias "_PC708_ValGetBits@12" (ByVal oldvalue As Integer, ByVal startbit As Long, ByVal endbit As Long) As Integer
Public Declare Function PC708_ValIncAscii Lib "P71W32.DLL" Alias "_PC708_ValIncAscii@4" (ByRef asciistr As String) As Long
Public Declare Function PC708_ValInccAscii Lib "P71W32.DLL" Alias "_PC708_ValInccAscii@4" (ByRef asciistr As String) As Long
Public Declare Function PC708_ValIsLower Lib "P71W32.DLL" Alias "_PC708_ValIsLower@4" (ByVal value As Long) As Long
Public Declare Function PC708_ValLenAscii Lib "P71W32.DLL" Alias "_PC708_ValLenAscii@8" (ByVal numbits As Long, ByVal radixval As Long) As Long
Public Declare Function PC708_ValPackCWD Lib "P71W32.DLL" Alias "_PC708_ValPackCWD@16" (ByVal taval As Long, ByVal trflag As Long, ByVal saval As Long, ByVal wcval As Long) As Integer
Public Declare Function PC708_ValPackRTCWD Lib "P71W32.DLL" Alias "_PC708_ValPackRTCWD@20" (ByVal mcflag As Long, ByVal taval As Long, ByVal trflag As Long, ByVal saval As Long, ByVal count As Long) As Integer
Public Declare Function PC708_ValPutBits Lib "P71W32.DLL" Alias "_PC708_ValPutBits@16" (ByVal oldvalue As Integer, ByVal newfld As Integer, ByVal startbit As Long, ByVal endbit As Long) As Integer
Public Declare Function PC708_ValToAscii Lib "P71W32.DLL" Alias "_PC708_ValToAscii@16" (ByVal value As Long, ByRef asciistr As String, ByVal numbits As Long, ByVal radixval As Long) As Long
Public Declare Function PC708_ValToUpper Lib "P71W32.DLL" Alias "_PC708_ValToUpper@4" (ByVal value As Long) As Long
Public Declare Function PC708_ValUnpackCWD Lib "P71W32.DLL" Alias "_PC708_ValUnpackCWD@20" (ByVal cwdval As Integer, ByRef taval As Long, ByRef trflag As Long, ByRef saval As Long, ByRef wcval As Long) As Long
Public Declare Function PC708_ValUnpackRTCWD Lib "P71W32.DLL" Alias "_PC708_ValUnpackRTCWD@28" (ByVal cwd As Integer, ByRef bcastflag As Long, ByRef mcflag As Long, ByRef taval As Long, ByRef trflag As Long, ByRef saval As Long, ByRef count As Long) As Long
Public Declare Function PC708_XmtAlloc Lib "P71W32.DLL" Alias "_PC708_XmtAlloc@8" (ByVal framecount As Integer, ByVal handleval As Long) As Long
Public Declare Function PC708_XmtConfigExxx Lib "P71W32.DLL" Alias "_PC708_XmtConfigExxx@24" (ByVal bcconfigval As Long, ByVal msgconfigval As Long, ByVal framefreq As Integer, ByVal intfreq As Integer, ByVal framecount As Integer, ByVal handleval As Long) As Long
Public Declare Function PC708_XmtCountRd Lib "P71W32.DLL" Alias "_PC708_XmtCountRd@4" (ByVal handleval As Long) As Integer
Public Declare Function PC708_XmtCountWr Lib "P71W32.DLL" Alias "_PC708_XmtCountWr@8" (ByVal countval As Integer, ByVal handleval As Long) As Long
Public Declare Function PC708_XmtDataCountRd Lib "P71W32.DLL" Alias "_PC708_XmtDataCountRd@4" (ByVal handleval As Long) As Integer
Public Declare Function PC708_XmtDataCountWr Lib "P71W32.DLL" Alias "_PC708_XmtDataCountWr@8" (ByVal countval As Integer, ByVal handleval As Long) As Long
Public Declare Function PC708_XmtFreq Lib "P71W32.DLL" Alias "_PC708_XmtFreq@8" (ByVal framefreq As Integer, ByVal handleval As Long) As Long
Public Declare Function PC708_XmtFreqEx Lib "P71W32.DLL" Alias "_PC708_XmtFreqEx@16" (ByVal framefreq As Integer, ByVal intfreq As Integer, ByVal framecount As Integer, ByVal handleval As Long) As Long
Public Declare Function PC708_XmtFreqExx Lib "P71W32.DLL" Alias "_PC708_XmtFreqExx@36" (ByVal framefreq As Integer, ByVal intfreq As Integer, ByVal framecount As Integer, ByVal bcconfigval As Long, ByVal bctotal As Integer, ByVal intconfigval As Long, ByVal inttotal As Integer, ByVal msgconfigval As Long, ByVal handleval As Long) As Long
Public Declare Function PC708_XmtIndex Lib "P71W32.DLL" Alias "_PC708_XmtIndex@8" (ByVal framenum As Integer, ByVal handleval As Long) As Long
Public Declare Function PC708_XmtNumberRd Lib "P71W32.DLL" Alias "_PC708_XmtNumberRd@4" (ByVal handleval As Long) As Integer
Public Declare Function PC708_XmtNumberWr Lib "P71W32.DLL" Alias "_PC708_XmtNumberWr@8" (ByVal brdnum As Integer, ByVal handleval As Long) As Long
Public Declare Function PC708_XmtPeriod Lib "P71W32.DLL" Alias "_PC708_XmtPeriod@8" (ByVal frameperiod As Long, ByVal handleval As Long) As Long
Public Declare Function PC708_XmtPeriodEx Lib "P71W32.DLL" Alias "_PC708_XmtPeriodEx@16" (ByVal frameperiod As Long, ByVal intfreq As Integer, ByVal framecount As Integer, ByVal handleval As Long) As Long
Public Declare Function PC708_XmtPeriodExx Lib "P71W32.DLL" Alias "_PC708_XmtPeriodExx@36" (ByVal frameperiod As Long, ByVal intfreq As Integer, ByVal framecount As Integer, ByVal bcconfigval As Long, ByVal bctotal As Integer, ByVal intconfigval As Long, ByVal inttotal As Integer, ByVal msgconfigval As Long, ByVal handleval As Long) As Long
Public Declare Function PC708_XmtRd Lib "P71W32.DLL" Alias "_PC708_XmtRd@12" (ByRef buf As Integer, ByVal framenum As Integer, ByVal handleval As Long) As Long
Public Declare Function PC708_XmtSizeWr Lib "P71W32.DLL" Alias "_PC708_XmtSizeWr@8" (ByVal mode As Integer, ByVal handleval As Long) As Long

'/**
'*
'*  Transmitter configuration options
'*
'**/

Public Const XMTCFG_DEFAULT As Long = &H0    '//Select all default settings
Public Const XMTCFG_BUSA As Long = &H0   '//Message will be transmitted on bus A (default)
Public Const XMTCFG_BUSB As Long = &H4   '//Message will be transmitted on bus B
Public Const XMTCFG_NOSWAP As Long = &H0 '//Disable bit swapping (default)
Public Const XMTCFG_SWAP As Long = &H4000   '//Enable bit swapping

'/**
'*
'*  Receiver configuration options
'*
'**/

Public Const RCVCFG_DEFAULT As Long = &H0    '//Select all default settings
Public Const RCVCFG_BUSA As Long = &H0   '//Respond to channel A (default)
Public Const RCVCFG_BUSB As Long = &H10000   '//Respond to channel B
Public Const RCVCFG_NOSWAP As Long = &H0 '//Disable bit swapping (default)
Public Const RCVCFG_SWAP As Long = &H8000   '//Enable bit swapping
Public Const RCVCFG_WORDSYNC As Long = &H0   '//Sync on words (default)
Public Const RCVCFG_BITSYNC As Long = &H80000    '//Sync on each bit

'/**
'*
'*  Bus controller configuration options
'*
'**/

Public Const BCCFG_DEFAULT As Long = &H0 '//Select all default settings
Public Const BCCFG_ENABLE As Long = &H0  '//Enable bus controller (default)
Public Const BCCFG_DISABLE As Long = &H1 '//Disable bus controller
Public Const BCCFG_TRIGNONE As Long = &H0    '//No trigger (default)
Public Const BCCFG_TRIGEXT As Long = &H10 '//Trigger external
Public Const BCCFG_TRIGSTART As Long = &H20   '//Trigger external start
Public Const BCCFG_NOINTHALT As Long = &H0   '//Do not generate interrupt on halt (default)
Public Const BCCFG_INTHALT As Long = &H100 '//Generate interrupt on halt
Public Const BCCFG_NOINTPAUSE As Long = &H0  '//Do not generate interrupt on pause (default)
Public Const BCCFG_INTPAUSE As Long = &H200    '//Generate interrupt on pause
Public Const BCCFG_NOLOOPMAX As Long = &H0   '//Disable maximum loop count (default)
Public Const BCCFG_LOOPMAX As Long = &H1000 '//Enable maximum loop count
Public Const BCCFG_NOSTEP As Long = &H0  '//Disable single stepping (default)
Public Const BCCFG_STEP As Long = &H2000    '//Enable single stepping
Public Const BCCFG_NOSWAP As Long = &H0  '//Disable bit swapping (default)
Public Const BCCFG_SWAP As Long = &H4000    '//Enable bit swapping
Public Const BCCFG_MC01 As Long = &H0    '//Select SA=00000 or SA=11111 for mode codes (default)
Public Const BCCFG_MC1 As Long = &H1000000 '//Select SA=11111 for mode codes
Public Const BCCFG_MC0 As Long = &H2000000 '//Select SA=00000 for mode codes
Public Const BCCFG_MCNONE As Long = &H3000000  '//Disable mode codes
Public Const BCCFG_SYNCALL As Long = &H0 '//Sync on all messages (default)
Public Const BCCFG_SYNCSEL As Long = &H40000000 '//Selective sync

'/**
'*
'*  Monitor configuration options
'*
'**/
